--- a/Selenium_With_TestNg_Framework_Demo/pom.xml
+++ b/Selenium_With_TestNg_Framework_Demo/pom.xml
@@ -38,7 +38,7 @@
 				<configuration>
 					<suiteXmlFiles>
 						<!-- TestNG suite XML files -->
-						<suiteXmlFile>./src/test/resources/testRunners/testng_sanity.xml</suiteXmlFile>
+						<suiteXmlFile>./src/test/resources/runnerTestNG/Runner_testNG.xml</suiteXmlFile>
 					</suiteXmlFiles>
 					<testFailureIgnore>true</testFailureIgnore>
 				</configuration>
@@ -67,13 +67,19 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.14.3</version>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>3.1.5</version>
 		</dependency>
 
 	</dependencies>
