--- a/Selenium_With_TestNg_Framework_Demo/src/test/resources/config/config.properties
+++ b/Selenium_With_TestNg_Framework_Demo/src/test/resources/config/config.properties
@@ -1,9 +1,9 @@
 browser = chrome
 url = https://demo.opencart.com/index.php?route=account/login
-username = naveenanimation20@gmail.com
+username = ashokleela1521@gmail.com
 password = Selenium12345
 headless = false
-incognito = false
+incognito = true
 highlight =
 remote = false
 hubUrl = http://localhost:4444/wd/hub
